packages/meridian/scss/scheduler/_variables.scss
/* ... */
/// The background color of the Scheduler event.
/// @group scheduler
$kendo-scheduler-event-bg: k-color(secondary-subtle) !default;
/// The text color of the Scheduler event.
/// @group scheduler
$kendo-scheduler-event-text: k-color(secondary-on-subtle) !default;
/// The border color of the Scheduler event.
/// @group scheduler
$kendo-scheduler-event-border: k-color(secondary-subtle) !default;
/// The gradient of the Scheduler event.
/// @group scheduler
$kendo-scheduler-event-gradient: null !default;
/// The shadow of the Scheduler event.
/// @group scheduler
$kendo-scheduler-event-shadow: inset 3px 0 0 0 k-color(secondary) !default;

/// The background color of the hovered Scheduler event.
/// @group scheduler
$kendo-scheduler-event-hover-bg: null !default;
/// The text color of the hovered Scheduler event.
/// @group scheduler
$kendo-scheduler-event-hover-text: null !default;
/// The border color of the hovered Scheduler event.
/// @group scheduler
$kendo-scheduler-event-hover-border: null !default;
/// The gradient of the hovered Scheduler event.
/// @group scheduler
$kendo-scheduler-event-hover-gradient: null !default;
/// The shadow of the hovered Scheduler event.
/// @group scheduler
$kendo-scheduler-event-hover-shadow: null !default;

/// The background color of the selected Scheduler event.
/// @group scheduler
$kendo-scheduler-event-selected-bg: k-color(secondary-subtle) !default;
/// The text color of the selected Scheduler event.
/// @group scheduler
$kendo-scheduler-event-selected-text: k-color(secondary-on-subtle) !default;
/// The border color of the selected Scheduler event.
/// @group scheduler
$kendo-scheduler-event-selected-border: null !default;
/// The gradient of the selected Scheduler event.
/// @group scheduler
$kendo-scheduler-event-selected-gradient: null !default;
/// The shadow of the selected Scheduler event.
/// @group scheduler
$kendo-scheduler-event-selected-shadow: inset 3px 0 0 0 k-color(secondary), 0 0 0 1px white, 0 0 0 2px k-color(secondary-on-surface) !default;

/// The shadow of the ongoing Scheduler event.
/// @group scheduler
$kendo-scheduler-event-ongoing-shadow: inset 0px 0px 0px 1px #ff0000 !default;

/// The horizontal padding of the Scheduler cell.
/// @group scheduler
$kendo-scheduler-cell-padding-x: k-spacing(2.5) !default;
/// The vertical padding of the Scheduler cell.
/// @group scheduler
$kendo-scheduler-cell-padding-y: k-spacing(2.5) !default;
/// The height of the Scheduler cell.
/// @group scheduler
$kendo-scheduler-cell-height: $kendo-line-height-em !default;
/// The width of the Scheduler date column.
/// @group scheduler
$kendo-scheduler-datecolumn-width: 12em !default;
/// The width of the Scheduler time column.
/// @group scheduler
$kendo-scheduler-timecolumn-width: 11em !default;

/// The background color of the non-working hours in the Scheduler.
/// @group scheduler
$kendo-scheduler-nonwork-bg: k-color(base) !default;
/// The text color of the non-working hours in the Scheduler.
/// @group scheduler
$kendo-scheduler-nonwork-text: null !default;

/// The text color of the Scheduler time column.
/// @group scheduler
$kendo-scheduler-timecolumn-text: k-color(subtle) !default;

/// The background color of the preceding/subsequent month cells in the Calendar.
/// @group scheduler
$kendo-scheduler-othermonth-bg: k-color(base) !default;
/// The text color of the preceding/subsequent month cells in the Calendar.
/// @group scheduler
$kendo-scheduler-othermonth-text: null !default;

/// The horizontal padding of the year view in the Scheduler.
/// @group scheduler
$kendo-scheduler-yearview-padding-x: k-spacing(3) !default;
/// The vertical padding of the year view in the Scheduler.
/// @group scheduler
$kendo-scheduler-yearview-padding-y: $kendo-scheduler-yearview-padding-x !default;

/// The spacing between the calendars of the year view in the Scheduler.
/// @group scheduler
$kendo-scheduler-yearview-calendar-gap: k-spacing(3) !default;

/// The days with events indicator size of the year view in the Scheduler.
/// @group scheduler
$kendo-scheduler-yearview-indicator-size: 3px !default;
/// The top position of the days with events indicator of the year view in the Scheduler.
/// @group scheduler
$kendo-scheduler-yearview-indicator-calc-offset-top: calc( #{$kendo-calendar-cell-size} - (#{$kendo-calendar-cell-padding-y} * 2)) !default;
/// The left position of the days with events indicator of the year view in the Scheduler.
/// @group scheduler
$kendo-scheduler-yearview-indicator-calc-offset-left: calc( 50% - #{math.div( $kendo-scheduler-yearview-indicator-size, 2 )} ) !default;
/* ... */

